--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -17,11 +17,13 @@
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.2",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "yup": "^1.6.1"
