✨ feat(- Fetched and displayed paginated public repositories using GitHub API - Added the ability to save comments for repositories using localStorage): Display public repos

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
-    "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
+    "octokit": "^4.0.3",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -25,6 +25,7 @@
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2",
     "redux": "^5.0.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
     "yup": "^1.6.1"
   },
